tests/paczka1/fuzzy1/60423565.err
Error in line 7: tnS S741 3,3
Error in line 12: xnWa S599 58,9
Error in line 10: tnS S599 74,8
Error in line 14: tnS S696 8,1
Error in line 6: Q8vKlgofZ S599 7,5
Error in line 24: xnWa A464 -1,5
Error in line 25: L6oqCVzaGzf S599 59,9
Error in line 13: xnWa A464 15,3
Error in line 30: L6oqCVzaGzf A464 10,9
Error in line 36: Q8vKlgofZ S696 42,1
Error in line 34: xnWa S741 71,7
